# meeting-notes

./: .gitignore  README.md  launch.local.example.json  launch.py  pyproject.toml
prompts/: opus-4.1-enterprise-meeting-summary-prompt.md
sample-media/: README.md  what-is-temperature-nasa-transcript.txt
src/meeting_notes_transcriber/: app.py  config.py  diarization.py  job_store.py  ssl.py  system.py  transcriber.py
src/meeting_notes_transcriber/static/: app.js  index.html  styles.css
tests/: test_app.py  test_diarization.py  test_job_store.py  test_launch.py  test_ssl.py  test_transcriber.py
