[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-notes-transcriber"
version = "0.1.0"
description = "Cross-platform local transcription web app with optional enterprise SSL bootstrapping."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "python-multipart>=0.0.20",
  "httpx>=0.28.0",
  "certifi>=2024.7.4",
  "imageio-ffmpeg>=0.6.0",
  "faster-whisper>=1.1.0",
  "pyannote.audio>=4.0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
